# duckplexity

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: app.py  auth.py  main.py  perplexity.py
